--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="col-lg-4 col-sm-6 col-12">
                         <div class="form-group">
                             <label>Customer</label>
                             <div class="row">
@@ -24,24 +24,24 @@
                                 </div>
                                 <div class="col-lg-2 col-sm-2 col-2 ps-0">
                                     <div class="add-icon">
-                                        <span><img src="assets/img/icons/plus1.svg" alt="img"></span>
+                                        <span><img src="~/images/plus1.svg" alt="img"></span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="col-lg-4 col-sm-6 col-12">
                         <div class="form-group">
                             <label>Customer</label>
                             <div class="input-groupicon">
                                 <input type="text" placeholder="Choose Date" class="datetimepicker">
                                 <a class="addonset">
-                                    <img src="assets/img/icons/calendars.svg" alt="img">
+                                    <img src="/images/calendars.svg" alt="img">
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="col-lg-4 col-sm-6 col-12">
                         <div class="form-group">
                             <label>Supplier</label>
                             <select class="select">
@@ -56,7 +56,7 @@
                             <div class="input-groupicon">
                                 <input type="text" placeholder="Please type product code and select...">
                                 <div class="addonset">
-                                    <img src="assets/img/icons/scanners.svg" alt="img">
+                                    <img src="/images/scanners.svg" alt="img">
                                 </div>
                             </div>
                         </div>
