--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -54,7 +54,7 @@
                         <div class="form-group">
                             <label>Product Name</label>
                             <div class="input-groupicon">
-                                <input type="text" placeholder="Please type product code and select...">
+                                <input type="text" placeholder="Please type product name or code and select...">
                                 <div class="addonset">
                                     <img src="/images/scanners.svg" alt="img">
                                 </div>
@@ -88,42 +88,6 @@
                                     </td>
                                     <td>1.00</td>
                                     <td>15000.00</td>
-                                    <td>0.00</td>
-                                    <td>0.00</td>
-                                    <td>1500.00</td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="delete-set"><img
-                                                src="assets/img/icons/delete.svg" alt="svg"></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td class="productimgname">
-                                        <a class="product-img">
-                                            <img src="assets/img/product/product8.jpg" alt="product">
-                                        </a>
-                                        <a href="javascript:void(0);">iPhone 11</a>
-                                    </td>
-                                    <td>1.00</td>
-                                    <td>1500.00</td>
-                                    <td>0.00</td>
-                                    <td>0.00</td>
-                                    <td>1500.00</td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="delete-set"><img
-                                                src="assets/img/icons/delete.svg" alt="svg"></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td class="productimgname">
-                                        <a class="product-img">
-                                            <img src="assets/img/product/product1.jpg" alt="product">
-                                        </a>
-                                        <a href="javascript:void(0);">Macbook pro</a>
-                                    </td>
-                                    <td>1.00</td>
-                                    <td>1500.00</td>
                                     <td>0.00</td>
                                     <td>0.00</td>
                                     <td>1500.00</td>
