--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/fontawesome.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 
 <body>
@@ -75,7 +77,6 @@
         </main>
     </div>
 
-    <script src="~/lib/jquery/dist/jquery-3.6.0.min.js"></script>
     <script src="~/js/feather.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.slimscroll.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.dataTables.min.js"></script>
