--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -86,6 +86,7 @@
     <script src="~/js/moment.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap-datetimepicker.min.js"></script>
     <script src="~/js/script.js"></script>
+    <script src="~/js/autocomplete.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
