autocomplete product list

--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -54,9 +54,12 @@
                         <div class="form-group">
                             <label>Product Name</label>
                             <div class="input-groupicon">
-                                <input type="text" placeholder="Please type product name or code and select...">
-                                <div class="addonset">
-                                    <img src="/images/scanners.svg" alt="img">
+                                <div class="ui-widget">
+                                    <input id="selectProduct" type="text"
+                                        placeholder="Please type product name or code and select...">
+                                    <div class="addonset">
+                                        <img src="/images/scanners.svg" alt="img">
+                                    </div>
                                 </div>
                             </div>
                         </div>
