add selected product to table

--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -72,33 +72,13 @@
                                 <tr>
                                     <th>#</th>
                                     <th>Product Name</th>
-                                    <th>QTY</th>
                                     <th>Price</th>
-                                    <th>Discount</th>
-                                    <th>Tax</th>
                                     <th>Subtotal</th>
                                     <th></th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="productimgname">
-                                        <a class="product-img">
-                                            <img src="assets/img/product/product7.jpg" alt="product">
-                                        </a>
-                                        <a href="javascript:void(0);">Apple Earpods</a>
-                                    </td>
-                                    <td>1.00</td>
-                                    <td>15000.00</td>
-                                    <td>0.00</td>
-                                    <td>0.00</td>
-                                    <td>1500.00</td>
-                                    <td>
-                                        <a href="javascript:void(0);" class="delete-set"><img
-                                                src="assets/img/icons/delete.svg" alt="svg"></a>
-                                    </td>
-                                </tr>
+                            <tbody id="cart-table-body">
+
                             </tbody>
                         </table>
                     </div>
