update total price on when product is selected or removed

--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -118,11 +118,11 @@
                                 <ul>
                                     <li>
                                         <h4>Order Tax</h4>
-                                        <h5>$ 0.00 (0.00%)</h5>
+                                        <h5>Ksh. 0.00 (0.00%)</h5>
                                     </li>
                                     <li>
                                         <h4>Discount </h4>
-                                        <h5>$ 0.00</h5>
+                                        <h5>Ksh. 0.00</h5>
                                     </li>
                                 </ul>
                             </div>
@@ -132,11 +132,11 @@
                                 <ul>
                                     <li>
                                         <h4>Shipping</h4>
-                                        <h5>$ 0.00</h5>
+                                        <h5>Ksh. 0.00</h5>
                                     </li>
                                     <li class="total">
                                         <h4>Grand Total</h4>
-                                        <h5>$ 0.00</h5>
+                                        <h5>Ksh. 0.00</h5>
                                     </li>
                                 </ul>
                             </div>
