--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -72,13 +72,14 @@
                                 <tr>
                                     <th>#</th>
                                     <th>Product Name</th>
+                                    <th>Quantity</th>
                                     <th>Price</th>
                                     <th>Subtotal</th>
                                     <th></th>
                                 </tr>
                             </thead>
                             <tbody id="cart-table-body">
-
+                                
                             </tbody>
                         </table>
                     </div>
