validate tax input

--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -87,8 +87,9 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-6 col-12">
                         <div class="form-group">
-                            <label>Order Tax</label>
-                            <input type="text">
+                            <label>Tax (%)</label>
+                            <span class="d-none tax-warning" style="color:red">Tax % cannot be more than 100</span>
+                            <input class="tax-input" type="number">
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 col-12">
