--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2141,7 +2141,8 @@ a:hover {
 }
 
 .form-group input[type=text],
-.form-group input[type=password] {
+.form-group input[type=password],
+.form-group input[type=number] {
   border: 1px solid rgba(145, 158, 171, 0.32);
   height: 40px;
   width: 100%;
