get customer names

--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -15,9 +15,8 @@
                     <div class="col-lg-6 col-sm-6 col-12">
                         <div class="form-group">
                             <label>Customer</label>
-                            <select class="js-example-basic-single">
+                            <select id="selectCustomer" class="js-example-basic-single">
                                 <option>Choose</option>
-                                <option>Customer Name</option>
                             </select>
                         </div>
                     </div>
