--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="col-lg-12">
-                    <a href="javascript:void(0);" class="btn btn-submit me-2">Submit</a>
+                    <a id="submitBtn" href="javascript:void(0);" class="btn btn-submit me-2">Submit</a>
                     <a href="javascript:void(0);" class="btn btn-cancel">Cancel</a>
                 </div>
             </div>
