submit sales order

--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -16,15 +16,15 @@
                         <div class="form-group">
                             <label>Customer</label>
                             <select id="selectCustomer" class="js-example-basic-single">
-                                <option>Choose</option>
+                                <option value="">Choose</option>
                             </select>
                         </div>
                     </div>
                     <div class="col-lg-6 col-sm-6 col-12">
                         <div class="form-group">
-                            <label>Customer</label>
+                            <label>Date</label>
                             <div class="input-groupicon">
-                                <input type="text" placeholder="Choose Date" class="datetimepicker">
+                                <input type="text" placeholder="Choose Date" class="datetimepicker date">
                                 <a class="addonset">
                                     <img src="/images/calendars.svg" alt="img">
                                 </a>
