--- a/Views/Sales/ViewInvoice.cshtml
+++ b/Views/Sales/ViewInvoice.cshtml
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-6 mb-4 mb-lg-0">
                         <h5 class="mb-3 fs-0">Customer Name:</h5>
-                        <h6 class="mb-2">@Model.Customer.fname&nbsp;@Model.Customer.lname</h6>
+                        <h6 class="mb-2">@Model.Customer.ContactName</h6>
                     </div>
                     <div class="col-md-6 col-lg-6 mb-4 mb-lg-0">
                         <h5 class="mb-3 fs-0">Invoice Date</h5>
