update get customers implementation

--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -15,9 +15,15 @@
                     <div class="col-lg-6 col-sm-6 col-12">
                         <div class="form-group">
                             <label>Customer</label>
-                            <select id="selectCustomer" class="js-example-basic-single">
-                                <option value="">Choose</option>
-                            </select>
+                            <div class="input-groupicon">
+                                <div class="ui-widget">
+                                    <input id="selectCustomer" type="text"
+                                        placeholder="Please type customer name and select...">
+                                    <div class="addonset">
+                                        <img src="/images/scanners.svg" alt="img">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-sm-6 col-12">
