display customers using autocomplete

--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -77,7 +77,7 @@
                         <div class="form-group">
                             <label>Tax (%)</label>
                             <span class="d-none tax-warning" style="color:red">Tax % cannot be more than 100</span>
-                            <input class="tax-input" type="number">
+                            <input class="tax-input" type="number" readonly>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12">
