--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -17,7 +17,7 @@
                             <label>Customer</label>
                             <div class="input-groupicon">
                                 <div class="ui-widget">
-                                    <input id="selectCustomer" type="text"
+                                    <input id="" class="selectCustomer" type="text"
                                         placeholder="Please type customer name and select...">
                                     <div class="addonset">
                                         <img src="/images/scanners.svg" alt="img">
@@ -104,14 +104,14 @@
                                     <h4>Tax</h4>
                                     <h5>
                                         Ksh.&nbsp;<span class="tax-value">0.00</span>
-                                        (<span class="tax-percentage">0)</span>%)
+                                        (<span class="tax-percentage">0)</span>
                                     </h5>
                                 </li>
                                 <li>
                                     <h4>Discount</h4>
                                     <h5>
                                         Ksh.&nbsp;<span class="discount-value">0.00</span>
-                                        (<span class="discount-percentage">0)</span>%)
+                                        (<span class="discount-percentage">0)</span>
                                     </h5>
                                 </li>
                             </ul>
